Improve controllers and error handling